objects/LiteratureInventory__c.object
<CustomObject>
    <fields>
        <fullName>AccountCode__c</fullName>
        <description>AccountCode
varchar2(50)</description>
        <label>Account Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActiveDate__c</fullName>
        <description>ActiveDate
date</description>
        <label>Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <description>Delivery
char(1)</description>
        <label>Delivery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description
varchar2(254)</description>
        <label>Description</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DetailedDescription__c</fullName>
        <description>DetailedDescription
varchar2(254)</description>
        <label>Detailed Description</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InactiveDate__c</fullName>
        <description>InactiveDate
date</description>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsActive
char(1)</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsBuildABookCover__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsBuildABookCover
char(1)</description>
        <label>Is Build A Book Cover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsBuildABookTOC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsBuildABookTOC
char(1)</description>
        <label>Is Build A Book TOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsKitComponent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsKitComponent
char(1)</description>
        <label>Is Kit Component</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsKit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsKit
char(1)</description>
        <label>Is Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNewItem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsNewItem
char(1)</description>
        <label>Is New Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOrderable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsOrderable
bool</description>
        <label>Is Orderable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPOD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsPOD
char(1)</description>
        <label>Is POD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVirtual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsVirtual
char(1)</description>
        <label>Is Virtual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ItemCode__c</fullName>
        <description>ItemCode
varchar2(100)</description>
        <externalId>true</externalId>
        <label>Item Code</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ItemDescription__c</fullName>
        <description>ItemDescription
varchar2(254)</description>
        <label>Item Description</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemId__c</fullName>
        <description>ItemId
varchar2(50)</description>
        <label>Item Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemTypeId__c</fullName>
        <description>ItemTypeId
char(1)</description>
        <label>Item Type Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocalInventoryItemId__c</fullName>
        <description>LocalInventoryItemId
varchar2(50)</description>
        <label>Local Inventory Item Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Price
number(10,2)</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <description>ProductLine
varchar2(100)</description>
        <label>Product Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QtyAvailable__c</fullName>
        <description>ProductLine
number(9,0)</description>
        <label>Qty Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QtyBackordered__c</fullName>
        <description>QtyBackordered
number(9,0)</description>
        <label>Qty Backordered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relevance__c</fullName>
        <description>Relevance
varchar2(50)</description>
        <label>Relevance</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <description>This contains the inventory data from Literature Fulfillment System (Nexttouch)</description>
    <label>Literature Inventory</label>
    <nameField>
        <displayFormat>LI-{0000000000}</displayFormat>
        <label>Literature Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LiteratureInventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>